--- a/playground/package.json
+++ b/playground/package.json
@@ -25,8 +25,8 @@
     "lucide-react": "^0.545.0",
     "next": "15.5.7",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
